# ParallelSort

./: .gitignore  CMakeLists.txt  README.md  data.txt
include/: sort_parallel.cuh  sort_serial.h
src/: main.cpp  main.cu  sort_parallel.cu  sort_serial.cpp
